Add project ngx-alert-message

--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -72,6 +72,16 @@
     <ul>
       <li>
         <div *ngIf="global.lang === 'en'">
+          National and International Investor (2024 - AUVP)
+        </div>
+
+        <div *ngIf="global.lang === 'pt'">
+          Investidor Nacional e Internacional (2024 - AUVP)
+        </div>
+      </li>
+
+      <li>
+        <div *ngIf="global.lang === 'en'">
           LGPD (General Data Protection Law): Knowing and understanding your
           impacts (2021 - Alura)
         </div>
@@ -444,6 +454,74 @@
             "
           >
             https://limoney.app
+          </a>
+        </div>
+      </li>
+
+      <li>
+        <div>
+          <strong>ngx-flexbox</strong>
+        </div>
+
+        <div *ngIf="global.lang === 'en'">
+          ngx-flexbox provides an easy layout API using Flexbox CSS. This module
+          provides Angular developers with component layout features using a
+          custom Layout API, mediaQuery observables, and injected DOM
+          flexbox-2016 CSS stylings. This lib was created as an alternative to
+          @angular/flexlayout, and was heavily inspired by it.
+        </div>
+
+        <div *ngIf="global.lang === 'pt'">
+          ngx-flexbox fornece uma API de layout fácil usando Flexbox CSS. Este
+          módulo fornece aos desenvolvedores Angular recursos de layout de
+          componentes usando uma API de Layout personalizada, observáveis
+          ​​mediaQuery e estilos CSS DOM flexbox-2016 injetados. Esta biblioteca
+          foi criada como uma alternativa ao @angular/flexlayout e foi
+          fortemente inspirada nela.
+        </div>
+
+        <div>
+          Website:
+          <a
+            href="https://ngx-flexbox.web.app/"
+            target="_blank"
+            [attr.aria-label]="
+              global.lang === 'en' ? 'Visit ngx-flexbox' : 'Acesso ngx-flexbox'
+            "
+          >
+            https://ngx-flexbox.web.app/
+          </a>
+        </div>
+      </li>
+
+      <li>
+        <div>
+          <strong>ngx-alert-message</strong>
+        </div>
+
+        <div *ngIf="global.lang === 'en'">
+          ngx-alert-message provides an Angular API for simplified use of alerts
+          on your website, completely customizable and easy to implement.
+        </div>
+
+        <div *ngIf="global.lang === 'pt'">
+          ngx-alert-message fornece uma API em Angular, para uso simplificado de
+          alertas em seu site, completamente customizável e de fácil
+          implementação.
+        </div>
+
+        <div>
+          Website:
+          <a
+            href="https://ngx-alert-message.web.app/"
+            target="_blank"
+            [attr.aria-label]="
+              global.lang === 'en'
+                ? 'Visit ngx-alert-message'
+                : 'Acesso ngx-alert-message'
+            "
+          >
+            https://ngx-alert-message.web.app/
           </a>
         </div>
       </li>
